# vellum

./: .dockerignore  .env.example  .gitignore  README.md  config.toml  docker-compose.yml  justfile
.github/workflows/: build.yml
deploy/: Dockerfile.be  Dockerfile.fe
deploy/keycloak/: realm-export.json
src/backend/: Cargo.toml
src/backend/src/: config.rs  main.rs
src/backend/src/auth/: middleware.rs  mod.rs  oidc.rs  session.rs
src/backend/src/docs/: git_meta.rs  handlers.rs  markdown.rs  mod.rs  vault_config.rs  walk.rs
src/backend/src/graph/: builder.rs  handlers.rs  mod.rs  parser.rs
src/backend/src/search/: handlers.rs  index.rs  mod.rs
src/frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/src/: app.css  app.html  hooks.server.ts
src/frontend/src/lib/: api.ts  graph-styles.ts  search.ts  types.ts
src/frontend/src/lib/components/: theme-toggle.svelte
src/frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/frontend/src/routes/docs/: +page.ts
src/frontend/src/routes/docs/[vault]/: +layout.svelte  +layout.ts  +page.ts
src/frontend/src/routes/graph/: +page.ts
src/frontend/src/routes/graph/[vault]/: +page.svelte  +page.ts
vaults/demo/: .vault.toml  index.md  markdown-showcase.md  wikilinks-demo.md
vaults/demo/protected/: secret.md
vaults/dev/: .vault.toml  api-reference.md  architecture.md  index.md  setup.md  snippets.md  tech-debt.md  todo.md
vaults/docs/: .vault.toml  changelog.md  deployment.md  faq.md  features.md  getting-started.md  index.md
(+2 files in other folders)
