[package]
name = "vellum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower-sessions = "0.14"
tower-sessions-redis-store = "0.16"
openidconnect = "4"
config = "0.15"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
time = "0.3"
toml = "0.8"
pulldown-cmark = "0.12"
ammonia = "4"
git2 = "0.20"
serde_yaml = "0.9"
base64 = "0.22"
urlencoding = "2"
regex = "1"
tantivy = "0.22"

[dev-dependencies]
axum-test = "16"
